--- a/source/partials/header.html
+++ b/source/partials/header.html
@@ -1,3 +1,34 @@
 <header>
-  Header
+	<!-- Positioning the Top Bar -->
+	<div>
+		<!-- Basic Needs -->
+		<nav class="top-bar">
+			<ul class="title-area">
+				<li class="name"><h1 class="site-nav-title">{{> link text='ABHRA BASAK' url='/index.html'}}</h1></li>
+        <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
+			</ul>
+			<section class="top-bar-section">
+				<ul class="left">
+          <li class="divider"></li>
+					<li>{{> link text='Home' url='/index.html'}}</li>
+          <li class="divider"></li>
+					<li>{{> link text='About' url='/about.html'}}</li>
+          <li class="divider"></li>
+					<li>{{> link text='Projects' url='/projects.html'}}</li>
+          <li class="divider"></li>
+          <li>{{> link text='Code' url='/code.html'}}</li>
+          <li class="divider"></li>
+					<li>{{> link text='Blog' url='/blog.html'}}</li>
+          <li class="divider"></li>
+				</ul>
+
+				<ul class="right">
+          <li class="divider"></li>
+          <li>{{> link text='Contact' url='/contact.html'}}</li>
+          <li class="divider"></li>
+					<li>{{> link text='Credits' url='/credits.html'}}</li>
+				</ul>
+			</section>
+		</nav>
+	</div>
 </header>
