--- a/source/assets/styles/application.scss
+++ b/source/assets/styles/application.scss
@@ -1,4 +1,4 @@
-@import 'settings';
+﻿@import 'settings';
 $include-html-global-classes: true;
 @import 'foundation/components/grid';
 $include-html-top-bar-classes: true;
@@ -11,4 +11,29 @@ $include-html-type-classes: true;
 
 body{
 	@include grid-column(12, $collapse: true);
+}
+header,
+main,
+footer{
+	@include grid-row(nest);
+	margin: 0 auto;
+}
+.site-nav-title{
+	font-family: Helvetica;
+}
+nav.top-bar{
+  margin-bottom: 0;
+}
+.view {
+	min-height: 500px;
+}
+.pane {
+  text-align: center;
+}
+footer{
+	background: rgb(201, 180, 159);
+	padding: 10px;
+	text-align: center;
+	font-size: rem-calc(14);
+	line-height: 120%;
 }
