--- a/source/layouts/default.hbs
+++ b/source/layouts/default.hbs
@@ -4,7 +4,7 @@
 
   <body class="<%= page_classes %>">
     {{> header}}
-    {{> body}}
+    {{{contents}}}
     {{> footer}}
 
     <script type="text/javascript">
