Register Jon's template helpers

--- a/source/partials/components/webicon-link.hbs
+++ b/source/partials/components/webicon-link.hbs
@@ -1,1 +1,1 @@
-<a href="{{url}}" class="webicon large {{lowercase text}}">{{text}}</a>
+<a href="{{url}}" class="webicon large {{text}}">{{text}}</a>
