--- a/source/templates/index.hbs
+++ b/source/templates/index.hbs
@@ -6,6 +6,7 @@ stylesheets:
 ---
 <main class="home view">
   <section class="display-pic">
+    {{lowercase "Abc"}}
     {{> image src='/assets/images/photo.jpg' alt='This is how I look' }}
   </section>
   <section class="hello-intro">
