Minor fixes in appearances

--- a/source/partials/components/email.hbs
+++ b/source/partials/components/email.hbs
@@ -1,3 +1,5 @@
 <section class="email">
-  {{> mailto url="me@abhra.in" text=(> image src="mail.png") class="mail-logo"}}
+  {{#> mailto url="me@abhra.in" class="mail-logo"}}
+  {{> image src="/assets/images/mail.png"}}
+  {{/mailto}}
 </section>
