--- a/source/templates/projects.hbs
+++ b/source/templates/projects.hbs
@@ -1,6 +1,7 @@
 ---
 title: Projects
-stylesheets: projects
+stylesheets:
+- projects
 ---
 <main class="projects view">
   <section class="projects-intro">
