--- a/source/templates/credits.hbs
+++ b/source/templates/credits.hbs
@@ -1,16 +1,17 @@
 ---
 title: Credits
-stylesheets: credits
+stylesheets:
+- credits
 ---
 <div class="credits view">
   <section class="credits-intro">
     <h4>Credits</h4>
     <p>
       This website has been proudly hand-crafted by me using
-      <strong>{{> link text="Foundation by Zurb" url="http://foundation.zurb.com"}}</strong>,
-      and <strong>{{> link text="The Middleman" url="http://middlemanapp.com"}}</strong>,
-      taking advantage of the power of <strong>{{> link text="Ruby" url="http://ruby-lang.org"}}</strong>
-      and <strong>{{> link text="Compass" url="http://compass-style.org"}}</strong>.
+      <strong>{{> link text="Foundation" url="http://foundation.zurb.com/"}}</strong>,
+      and <strong>{{> link text="Gulp" url="http://http://gulpjs.com/"}}</strong>,
+      taking advantage of the power of <strong>{{> link text="CoffeeScript" url="http://http://coffeescript.org/"}}</strong>
+      and <strong>{{> link text="SASS" url="http://http://sass-lang.com/"}}</strong>.
       It is hosted using <strong>{{> link text="GitHub Pages" url="http://pages.github.com"}}</strong>.
     </p>
     <p>All Trademarks belong to their respective Owners.</p>
