Hotfix for broken partial-block

--- a/source/partials/components/email.hbs
+++ b/source/partials/components/email.hbs
@@ -1,5 +1,3 @@
 <section class="email">
-  {{#> mailto url="me@abhra.in" class="mail-logo"}}
-  {{> image src="/assets/images/mail.png"}}
-  {{/mailto}}
+  {{> mailto url="me@abhra.in" text=(image "mail.png" "EMAIL") class="mail-logo"}}
 </section>
