--- a/source/partials/html/mailto.hbs
+++ b/source/partials/html/mailto.hbs
@@ -1,1 +1,1 @@
-<a href="mailto:{{url}}" class="{{class}}">{{text}}{{> @partial-block }}</a>
+<a href="mailto:{{url}}" class="{{class}}">{{text}}</a>
