--- a/source/templates/contact.hbs
+++ b/source/templates/contact.hbs
@@ -9,7 +9,7 @@ stylesheets:
     <h4>Get in Touch for Thoughts over a Coffee - or just say Hello</h4>
     <p>
       So you want to contact me, right? Well, let's see. If you want to say hello, ask a question or share your thoughts,
-      and succeed in the task of drafting an {{#> mailto url="me@abhra.in" text="EMAIL" class="email-link"}}{{/mailto}}
+      and succeed in the task of drafting an {{> mailto url="me@abhra.in" text="EMAIL" class="email-link"}}
       then you might just be able to do exactly that. I'll receive your message, read it, tear it up and throw
       it dramatically into the fire. Oh, and then I'll respond, of course.
     </p>
