--- a/source/templates/credits.hbs
+++ b/source/templates/credits.hbs
@@ -17,7 +17,7 @@ stylesheets:
     <p>All Trademarks belong to their respective Owners.</p>
     <h6 class="other-components">Other components</h6>
     <ul class="credits-list">
-      {{#each credits.[0] as |url source|}}
+      {{#each data.credits as |url source|}}
       <li>{{> link text=source url=url}}</li>
       {{/each}}
     </ul>
