Upgrade to Panini v1 release

--- a/source/templates/about.hbs
+++ b/source/templates/about.hbs
@@ -13,6 +13,6 @@ stylesheets:
       and experimenting with new things, regardless of the brief.
     </p>
   </section>
-  {{> intropane intro=data.music}}
-  {{> intropane intro=data.code}}
+  {{> intropane intro=music}}
+  {{> intropane intro=code}}
 </main>
