--- a/source/templates/code.hbs
+++ b/source/templates/code.hbs
@@ -10,6 +10,6 @@ stylesheets:
     <p>Here is an overview of my development and coding skills. Have a look at my GitHub profile for some code samples.</p>
     {{> iconpane itemtype=code.id items=code.icons}}
   </section>
-  {{> graph graphdata=data.dev}}
-  {{> graph graphdata=data.skills}}
+  {{> graph graphdata=dev}}
+  {{> graph graphdata=skills}}
 </main>
