--- a/source/templates/index.hbs
+++ b/source/templates/index.hbs
@@ -32,6 +32,6 @@ stylesheets:
   </section>
   <section class="home-social">
     <h5>Find out what I'm up to:</h5>
-    {{> social classnames="social panel" contacts=data.contact}}
+    {{> social classnames="social panel" contacts=contact}}
   </section>
 </main>
