--- a/source/templates/contact.hbs
+++ b/source/templates/contact.hbs
@@ -23,7 +23,7 @@ stylesheets:
       Not a contact form person? If you don't think you can handle it, use the icons below to track me
       around the world. It's not too hard to find me.
     </p>
-    {{> social classnames="social-icons" contacts=data.contact}}
+    {{> social classnames="social-icons" contacts=contact}}
   </section>
   {{> email}}
 </main>
