--- a/source/templates/credits.hbs
+++ b/source/templates/credits.hbs
@@ -8,7 +8,7 @@ stylesheets:
     <h4>Credits</h4>
     <p>
       This website has been proudly hand-crafted by me using
-      <strong>{{> link text="Foundation" url="http://foundation.zurb.com/"}}</strong>,
+      <strong>{{> link text="Foundation" url="http://foundation.zurb.com/"}}</strong>
       and <strong>{{> link text="Gulp" url="http://http://gulpjs.com/"}}</strong>,
       taking advantage of the power of <strong>{{> link text="CoffeeScript" url="http://http://coffeescript.org/"}}</strong>
       and <strong>{{> link text="SASS" url="http://http://sass-lang.com/"}}</strong>.
@@ -17,7 +17,7 @@ stylesheets:
     <p>All Trademarks belong to their respective Owners.</p>
     <h6 class="other-components">Other components</h6>
     <ul class="credits-list">
-      {{#each data.credits as |url source|}}
+      {{#each credits as |url source|}}
       <li>{{> link text=source url=url}}</li>
       {{/each}}
     </ul>
