Fix handlebars helpers, iterators and layouts

--- a/source/templates/blog.hbs
+++ b/source/templates/blog.hbs
@@ -4,6 +4,7 @@ stylesheets:
 - blog
 - webicons
 ---
+{{#> default}}
 <main class="blog view">
   <div class="margin-auto panel callout">
     <h2>Margin: Auto</h2>
@@ -11,3 +12,4 @@ stylesheets:
     <p>Coming Soon</p>
   </div>
 </main>
+{{/default}}
