--- a/source/templates/about.hbs
+++ b/source/templates/about.hbs
@@ -4,6 +4,7 @@ stylesheets:
 - about
 - webicons
 ---
+{{#> default}}
 <main class="about view">
   <section class="about-intro">
     <h4>About Me</h4>
@@ -13,6 +14,7 @@ stylesheets:
       and experimenting with new things, regardless of the brief.
     </p>
   </section>
-  {{> intropane intro=music.[0]}}
-  {{> intropane intro=code.[0]}}
+  {{> intropane intro=music}}
+  {{> intropane intro=code}}
 </main>
+{{/default}}
