--- a/source/templates/contact.hbs
+++ b/source/templates/contact.hbs
@@ -4,6 +4,7 @@ stylesheets:
 - contact
 - webicons
 ---
+{{#> default}}
 <main class="contact view">
   <section class="contact-intro">
     <h4>Get in Touch for Thoughts over a Coffee - or just say Hello</h4>
@@ -23,7 +24,8 @@ stylesheets:
       Not a contact form person? If you don't think you can handle it, use the icons below to track me
       around the world. It's not too hard to find me.
     </p>
-    {{> social classnames="social-icons" contacts=contact.[0]}}
+    {{> social classnames="social-icons" contacts=contact}}
   </section>
   {{> email}}
 </main>
+{{/default}}
